[tool.poetry]
name = "chess-llm"
version = "0.1.0"
description = ""
authors = ["gabrielfior <fior.gbm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12,<3.13"
chess = "^1.10.0"
black = "^24.4.2"
pyqt5 = "^5.15.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
